--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,11 @@
             </dependency>
     -->
         <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>7.34.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.flickr4java</groupId>
             <artifactId>flickr4java</artifactId>
             <version>3.0.4</version>
