--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "bundle-analyzer": "webpack-bundle-analyzer dist/vuexy/stats.json",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "gs-api": "npm run gs-api:extract && npm run gs-api:swagger-gen",
+    "gs-api:extract": "node ./tools/swagger/src/swagger.json kaddem-0.0.1-SNAPSHOT",
+    "gs-api:swagger-gen": "./node_modules/.bin/ng-swagger-gen -i ./tools/swagger/src/swagger.json -o src/gs-api/src"
   },
   "private": true,
   "dependencies": {
@@ -37,7 +40,7 @@
     "@fullcalendar/interaction": "5.7.2",
     "@fullcalendar/list": "5.7.2",
     "@fullcalendar/timegrid": "5.7.2",
-    "@ng-bootstrap/ng-bootstrap": "11.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "9.0.2",
     "@ng-select/ng-select": "6.1.0",
     "@ngx-translate/core": "13.0.0",
     "@sweetalert2/ngx-sweetalert2": "8.1.1",
@@ -47,13 +50,14 @@
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
     "autoprefixer": "10.4.5",
-    "bootstrap": "4.6.1",
+    "bootstrap": "4.5.3",
     "bs-stepper": "1.7.0",
     "chart.js": "2.9.4",
     "core-js": "3.14.0",
     "feather-icons": "4.28.0",
     "flatpickr": "4.6.9",
     "hammerjs": "2.0.8",
+    "jquery": "^3.6.1",
     "katex": "0.13.11",
     "lodash": "4.17.21",
     "ng-apexcharts": "1.5.8",
@@ -72,6 +76,7 @@
     "ngx-toastr": "14.0.0",
     "node-waves": "0.7.6",
     "nouislider": "15.1.1",
+    "pipe": "^1.1.0",
     "plyr": "3.6.8",
     "quill": "1.3.7",
     "rxjs": "6.6.0",
@@ -99,6 +104,8 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.5.0",
+    "ng-packagr": "^14.2.2",
+    "ng-swagger-gen": "^2.3.1",
     "typescript": "4.7.4",
     "webpack-bundle-analyzer": "4.4.2"
   }
