--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,11 +62,13 @@
     "lodash": "4.17.21",
     "ng-apexcharts": "1.5.8",
     "ng-block-ui": "3.0.2",
+    "ng-modal": "^1.0.2",
     "ng2-charts": "2.4.2",
     "ng2-dragula": "2.1.1",
     "ng2-file-upload": "1.4.0",
     "ng2-flatpickr": "9.0.0",
     "ng2-nouislider": "1.8.3",
+    "ng2-search-filter": "^0.5.1",
     "ngx-highlightjs": "4.1.4",
     "ngx-mask": "12.0.0",
     "ngx-perfect-scrollbar": "10.1.1",
