A lot of things

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "@circlon/angular-tree-component": "11.0.4",
     "@ctrl/ngx-csv": "4.0.0",
     "@ctrl/ngx-rightclick": "4.0.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fullcalendar/angular": "5.7.1",
     "@fullcalendar/daygrid": "5.7.2",
     "@fullcalendar/interaction": "5.7.2",
