--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -116,7 +116,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "vuexy:build"
+            "browserTarget": "vuexy:build",
+            "host": "127.0.0.1"
           },
           "configurations": {
             "production": {
