--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -54,3 +54,5 @@ app:
     accountSID: AC2ebedfd3ee1e0b41e0065f6166bbd642
     authToken: 80de8f7aedda794f21c3825da35d58f2
     toPhoneNo: +21698975800
+
+  name: Kaddem
