--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,7 +55,10 @@
             <groupId>org.apache.johnzon</groupId>
             <artifactId>johnzon-core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!--
                 <dependency>
                     <groupId>io.jsonwebtoken</groupId>
