--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-
-
 spring:
   main:
     allow-circular-references: true
   datasource:
     url: jdbc:mysql://localhost:3306/university?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password:
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   ## Specify DBMS
   jpa:
@@ -16,14 +14,27 @@ spring:
       hibernate:
         ddl-auto: update
         dialect: org.hibernate.dialect.MySQL8Dialect
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
 
     generate-ddl: true
 
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: khalil.turki1999@gmail.com
+    password: ukuclawwmkxksqcc
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
 
 
 
@@ -59,10 +70,5 @@ app:
     accountSID: AC2ebedfd3ee1e0b41e0065f6166bbd642
     authToken: 80de8f7aedda794f21c3825da35d58f2
     toPhoneNo: +21698975800
-    
-     spring.mail.host=smtp.gmail.com
-     spring.mail.port=587
-     spring.mail.username=khalil.turki1999@gmail.com
-     spring.mail.password=ukuclawwmkxksqcc
-     spring.mail.properties.mail.smtp.auth=true
-     spring.mail.properties.mail.smtp.starttls.enable=true
+
+  name: Kaddem
