--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr353</artifactId>
-            <version>2.9.8</version>
+            <version>2.14.0</version>
         </dependency>
 
         <dependency>
@@ -149,6 +149,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
         </dependency>
     </dependencies>
 
