--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@ng-bootstrap/ng-bootstrap": "9.0.2",
     "@ng-select/ng-select": "6.1.0",
     "@ngx-translate/core": "13.0.0",
+    "@stomp/rx-stomp": "^1.2.0",
     "@sweetalert2/ngx-sweetalert2": "8.1.1",
     "@swimlane/ngx-datatable": "19.0.0",
     "angular-in-memory-web-api": "0.11.0",
