--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -159,7 +160,47 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <!-- JUnit 5
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+-->
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+
+
+
     </dependencies>
+
+    <!-- Deploy to Nexus -->
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.10.10:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
+
 
 
     <build>
@@ -183,47 +224,10 @@
                 </configuration>
             </plugin>
 
-            <!--
-            <plugin>
-                <groupId>com.github.kongchen</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.8</version>
-                <configuration>
-                    <apiSources>
-                        <apiSource>
-                            <springmvc>true</springmvc>
-                            <locations>
-                                <location>com.khalil.eschool.controller.api</location>
-                            </locations>
-                            <basePath>http://localhost:8081</basePath>
-                            <info>
-                                <title>Swagger Api Documentation for application</title>
-                                <version>${project.version}</version>
-                                <description>Swagger Api documentation for  application</description>
-                                <contact>
-                                    <email>bouali.social@gmail.com</email>
-                                    <name>Ali Bouali</name>
-                                    <url>https://www.udemy.com/user/bouali-ali/</url>
-                                </contact>
-                            </info>
-                            <outputPath>${project.build.directory}</outputPath>
-                            <outputFormats>json</outputFormats>
-                            <swaggerApiReader>com.github.kongchen.swagger.docgen.reader.SpringMvcApiReader</swaggerApiReader>
-                            <swaggerDirectory>${project.build.directory}</swaggerDirectory>
-                        </apiSource>
-                    </apiSources>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
+
         </plugins>
+
     </build>
+
 
 </project>
