--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
+
   main:
     allow-circular-references: true
   datasource:
-    url: jdbc:mysql://localhost:3306/university?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/university?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password:
+    password:  # Leave this field empty
     driver-class-name: com.mysql.cj.jdbc.Driver
   ## Specify DBMS
   jpa:
@@ -18,6 +19,7 @@ spring:
         format_sql: false
 
     generate-ddl: true
+
 
   mvc:
     pathmatch:
