--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,37 +1,27 @@
 version: "3.9"
-
 services:
-  candidats:
-    container_name: candidats
-    hostname: candidats
-    image: "khalilturki/devops-application:1.0.0"  # Update with your Docker image name and tag
+  devops:
+    container_name: devops
+    hostname: devops
+    image: "devops:latest"
+    build: .
     ports:
-      - "9000:8080"  # Map the container's port 8080 to host port 9000
+      - "8081:8081"
     environment:
-      - eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka/
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://serviceregistry:8761/eureka/
-      - spring.datasource.url=jdbc:mysql://db-mysql:3306/your_database_name?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      - spring.datasource.url=jdbc:mysql://db-mysql:3306/university?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=
     depends_on:
-      - eureka-server
       - db-mysql
 
-  eureka-server:
-    image: "your-eureka-server-image:tag"  # Update with your Eureka server image and tag
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-
   db-mysql:
-    image: "mysql:8.0"  # Update with the MySQL version you are using
+    image: "mysql:5.6"
     hostname: db-mysql
-    container_name: db-mysql
+    container_name: db-mysqll
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=your_database_name
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
     ports:
-      - "3306:3306"
+      - "3307:3306"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
