--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -77,3 +77,9 @@ app:
     toPhoneNo: +21698975800
 
   name: Kaddem
+
+  management:
+    endpoints:
+      web:
+        exposure:
+          include=*:
