--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 services:
-  devops:
+  backend:
     container_name: devops
-    image: "khalilturki/devops-application:1.0.0"
+    image: "therealmkadmi42/backend-java-app:1.0.0"
     build: .
     ports:
       - "8087:8087"
@@ -13,7 +13,7 @@ services:
     depends_on:
       - db-mysql
 
-  db-mysql:
+  mysql:
     image: "mysql:5.6"
     hostname: db-mysql
     container_name: db-mysqll
