--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,3 +26,13 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+
+  angular-app:
+    container_name: angular-app
+    image: "khalilturki/devops-application:angular-app-1.0.1"
+    build:
+      context: /frontend
+    ports:
+      - "4200:4200"
+
+
