--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     container_name: angular-app
     image: "khalilturki/devops-application:angular-app-1.0.1"
     build:
-      context: ./ang
+      context: ../frontend
     ports:
       - "4200:4200"
 
