--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -161,6 +161,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- JUnit 5
         <dependency>
             <groupId>org.junit.jupiter</groupId>
