--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "8.2.1",
   "scripts": {
     "ng": "ng",
-    "start": "set NODE_OPTIONS=--max_old_space_size=8192 & ng serve --open",
+    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8192 ng serve --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
@@ -102,6 +102,7 @@
     "@types/jasmine": "3.6.3",
     "@types/node": "12.11.1",
     "codelyzer": "6.0.1",
+    "cross-env": "^7.0.3",
     "jasmine-core": "3.7.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
