--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -34,6 +34,4 @@ services:
       context: ../frontend
     ports:
       - "4200:4200"
-    command: ["npm", "start", "--host", "0.0.0.0"]
-
-
+    command: [ "npm", "start", "--", "--host", "0.0.0.0" ]
