--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,15 +1,11 @@
 version: "3.9"
 services:
   devops:
-    container_name: devops
+    container_name: springboot
     image: "karimtrabelsi/devops-application:1.0.0"
     build: .
     ports:
       - "8087:8087"
-    environment:
-      - spring.datasource.url=jdbc:mysql://db-mysql:3306/university?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=
     depends_on:
       - db-mysql
 
