--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,16 +7,16 @@ services:
     ports:
       - "8087:8087"
     environment:
-      - spring.datasource.url=jdbc:mysql://db-mysql:3306/university?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      - spring.datasource.url=jdbc:mysql://mysql:3306/university?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=
     depends_on:
-      - db-mysql
+      - mysql
 
   mysql:
     image: "mysql:5.6"
-    hostname: db-mysql
-    container_name: db-mysqll
+    hostname: mysql
+    container_name: mysql-container
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
     ports:
