--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -192,12 +192,14 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.11.2 </version>
         </dependency>
-
-
-
-
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Deploy to Nexus -->
