--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,3 +26,12 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+
+  angular-app:
+    container_name: angular-app
+    image: "therealmkadmi42/angular-app:1.0.0"
+    build:
+      context: ../frontend
+    ports:
+      - "4200:4200"
+    command: [ "npm", "start", "--", "--host", "0.0.0.0" ]
