--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "8.2.1",
   "scripts": {
     "ng": "ng",
-    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8192 ng serve --open",
+    "start": "set NODE_OPTIONS=--max_old_space_size=8192 & ng serve --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
@@ -57,7 +57,7 @@
     "bs-stepper": "1.7.0",
     "chart.js": "2.9.4",
     "core-js": "3.14.0",
-    "feather-icons": "4.28.0",
+    "feather-icons": "^4.28.0",
     "flatpickr": "4.6.9",
     "hammerjs": "2.0.8",
     "jquery": "^3.6.1",
@@ -102,7 +102,6 @@
     "@types/jasmine": "3.6.3",
     "@types/node": "12.11.1",
     "codelyzer": "6.0.1",
-    "cross-env": "^7.0.3",
     "jasmine-core": "3.7.0",
     "karma": "6.3.0",
     "karma-chrome-launcher": "3.1.0",
